bk_ida/mcfida/g1/primal_bea_mpp
pbeampp.c:581:9: error: conflicting types for 'primal_bea_mpp'
arc_t * primal_bea_mpp( __int64 m, arc_t *arcs, arc_t *stop_arcs, cost_t *red_cost_of_bea) 
        ^
./pbeampp.h:30:15: note: previous declaration is here
extern arc_t *primal_bea_mpp _PROTO_(( long, arc_t*, arc_t*, cost_t* ));
              ^
pbeampp.c:604:6: error: use of undeclared identifier 'basket_0'; did you mean 'basket'?
v9 = basket_0 + 24; 
     ^~~~~~~~
     basket
pbeampp.c:59:15: note: 'basket' declared here
static BASKET basket[B+K+1];
              ^
2 errors generated.
